Few additions Minitutorials 1 and 2 26052014

--- a/Minitutorial_01.Rmd
+++ b/Minitutorial_01.Rmd
@@ -50,7 +50,7 @@ In order to see what the function **ls()** does, type:
 ?ls();
 ```
 
-### Find the package a function belongs:
+### Find the package a function belongs to:
 We can double-check **rm()** really belongs to the base package by using the function **find()**
 ```{rfind}
 find("rm")
