--- a/Minitutorial_01.Rmd
+++ b/Minitutorial_01.Rmd
@@ -29,6 +29,29 @@ Let's type:
 We see the function **help.search()** can take several *parameters*.  
 
 We will use by now only the arguments *pattern* and *package*.
+
+Also note that in the section **See Also** appear links to other functions.  Particularly look at this line:
+
+ ---
+> RSiteSearch to access an on-line search of R resources.
+
+ ---
+The function **RSiteSearch()** uses an on-line search engine for finding keywords and phrases through the R documentation.  Very powerful but you need to learn how to use it in order to get the results you want otherwise you can end up with thousand documents not related with what you were looking for.
+
+Type for example:
+```{rRsiteSearch}
+RSiteSearch("help")
+```
+The search returned 4027 documents.
+
+So a better search will look like this:
+```{r}
+RSiteSearch("{remove objects}", restrict = "function")
+```
+Now our search returned 79 documents, and the second one listed is the one we were looking for.
+
+Let's back to our local search, and see what the **help.search()** function can do.
+
 ```{r localhelpex}
 help.search("remove objects", package = "base");
 ```
